--- a/css/responder.css
+++ b/css/responder.css
@@ -13,7 +13,7 @@ body .common_q{
 body .common_q .title{
     margin: 20px 40px;
     font-size: 2em;
-    font-weight: 800;
+    font-weight: 600;
 }
 
 body .common_q .body{
@@ -42,26 +42,50 @@ body .registered_tickets{
     width: 80%;
     height: 80vh;
     overflow-y: scroll;
+    flex-direction: column;
 }
 
-body .registered_tickets .title{
+body .registered_tickets h1{
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 900;
+    color: rgb(13, 127, 203);
+}
+
+body .registered_tickets .ticket{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-bottom: 20px;
+}
+
+body .registered_tickets .ticket .title{
     margin: 20px 40px;
     font-size: 2em;
-    font-weight: 800;
+    font-weight: 400;
 }
 
-body .registered_tickets .body{
+body .registered_tickets .ticket .body{
     text-align: justify;
-    width: 30%;
+    width: 100%;
     margin: 0px 75px;
     font-size: 1.2em;
     font-style: oblique;
     text-transform: capitalize;
 }
 
-body .registered_tickets .addedBy{
+body .registered_tickets .ticket .addedBy{
     text-align: right;
-    width: 40%;
+    width: 100%;
+}
+
+body .registered_tickets .ticket button{
+    /* background-color: rgb(3, 152, 152); */
+    border-radius: 10px;
+    width: 10%;
+    margin: 25px 0px;
+    padding: 5px 10px;    
+    align-self: flex-end;
 }
 
 
@@ -70,7 +94,7 @@ body .registered_tickets .addedBy{
 
 
 body .unreg_tickets{
-    display: none;
+    display:  none;
     background-color: rgb(220, 220, 220);
     border-radius: 50px;
     margin: auto;
@@ -80,13 +104,24 @@ body .unreg_tickets{
     overflow-y: scroll;
 }
 
-body .unreg_tickets .title{
+body .unreg_tickets h1{
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 900;
+    color: rgb(13, 127, 203);
+}
+
+body .unreg_tickets .ticket{
+    margin-bottom: 35px;
+}
+
+body .unreg_tickets .ticket .title{
     margin: 20px 40px;
     font-size: 2em;
     font-weight: 800;
 }
 
-body .unreg_tickets .body{
+body .unreg_tickets .ticket .body{
     text-align: justify;
     width: 30%;
     margin: 0px 75px;
@@ -95,7 +130,12 @@ body .unreg_tickets .body{
     text-transform: capitalize;
 }
 
-body .unreg_tickets .addedBy{
+body .unreg_tickets .ticket .addedBy{
     text-align: right;
     width: 40%;
+}
+
+
+body .reply {
+    display: none;
 }
