--- a/css/responder.css
+++ b/css/responder.css
@@ -112,6 +112,9 @@ body .unreg_tickets h1{
 }
 
 body .unreg_tickets .ticket{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
     margin-bottom: 35px;
 }
 
@@ -123,7 +126,7 @@ body .unreg_tickets .ticket .title{
 
 body .unreg_tickets .ticket .body{
     text-align: justify;
-    width: 30%;
+    width: 80%;
     margin: 0px 75px;
     font-size: 1.2em;
     font-style: oblique;
@@ -132,8 +135,25 @@ body .unreg_tickets .ticket .body{
 
 body .unreg_tickets .ticket .addedBy{
     text-align: right;
-    width: 40%;
+    width: 90%;
 }
+
+body .unreg_tickets .ticket form button{
+    /* background-color: rgb(3, 152, 152); */
+    border-radius: 10px;
+    width: 10%;
+    margin: 25px 0px;
+    padding: 5px 10px;    
+    align-self: flex-end;
+    margin-left: 90%;
+}
+
+
+
+
+
+
+
 
 
 body .reply {
@@ -178,7 +198,8 @@ body .reply form .solution{
 
 
 body .reply form .solution textarea{
-    background-color: rgb(216, 248, 248);
+    background-color: rgb(163, 241, 241);
+    border-radius: 10px;
 }
 
 body .reply form button{
