--- a/css/registered.css
+++ b/css/registered.css
@@ -1,11 +1,12 @@
 body .askedQ{
-    background-color: rgb(220, 220, 220);
+    background-color: rgba(219, 219, 219, 0.75);
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
     width: 80%;
     height: 80vh;
     overflow-y: scroll;
+    padding-bottom: 50px;
 }
 
 body .askedQ h1{
