--- a/css/responder.css
+++ b/css/responder.css
@@ -1,7 +1,7 @@
 
 body .common_q{
     display: none;
-    background-color: rgb(220, 220, 220);
+    background-color: rgba(219, 219, 219, 0.75);
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
@@ -35,7 +35,7 @@ body .common_q .addedBy{
 
 
 body .registered_tickets{
-    background-color: rgb(220, 220, 220);
+    background-color: rgba(219, 219, 219, 0.75);
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
@@ -95,7 +95,7 @@ body .registered_tickets .ticket button{
 
 body .unreg_tickets{
     display:  none;
-    background-color: rgb(220, 220, 220);
+    background-color: rgba(219, 219, 219, 0.75);
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
@@ -163,7 +163,7 @@ body .reply {
 
 body .reply{
     display:  none;
-    background-color: rgb(220, 220, 220);
+    background-color: rgba(219, 219, 219, 0.75);
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
@@ -198,7 +198,7 @@ body .reply form .solution{
 
 
 body .reply form .solution textarea{
-    background-color: rgb(163, 241, 241);
+    background-color: rgba(163, 241, 241, 0.75);
     border-radius: 10px;
 }
 
