--- a/css/unregistered.css
+++ b/css/unregistered.css
@@ -7,7 +7,7 @@ body{
 
 body .common_q{
     display: block;
-    background-color: rgb(220, 220, 220);
+    background-color: rgba(219, 219, 219, 0.75);
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
