--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(../assets/background.jpg);
+    background-image: url(../assets/background1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
