--- a/css/login.css
+++ b/css/login.css
@@ -41,6 +41,11 @@ fieldset{
     margin: 50px 20px;
 }
 
+.form .mainForm div input {
+    padding: 5px 10px;
+    border-radius: 15px;
+}
+
 .form .mainForm button{
     transform: translateX(400%);
     width: 10%;
