--- a/css/responder.css
+++ b/css/responder.css
@@ -92,13 +92,28 @@ body .registered_tickets .ticket .addedBy{
     width: 100%;
 }
 
-body .registered_tickets .ticket button{
-    /* background-color: rgb(3, 152, 152); */
+body .registered_tickets .ticket form {
+    /* background-color: rgb(3, 152, 152); */    
+    align-self: flex-end;
+}
+
+body .registered_tickets .ticket .button{
     border-radius: 10px;
-    width: 10%;
     margin: 25px 0px;
     padding: 5px 10px;    
     align-self: flex-end;
+    box-shadow: 0px 0px;
+}
+
+body .registered_tickets .ticket form .button{
+    border-radius: 10px;
+    margin: 25px 0px;
+    padding: 5px 10px;
+    box-shadow: 1px 2px;
+}
+
+body .registered_tickets .ticket form input{
+    display: none;
 }
 
 
@@ -168,53 +183,3 @@ body .unreg_tickets .ticket form button{
 
 
 
-
-body .reply {
-    display: none;
-}
-
-
-body .reply{
-    display:  none;
-    background-color: rgba(219, 219, 219, 0.75);
-    border-radius: 50px;
-    margin: auto;
-    margin-top: 25px;
-    width: 80%;
-    height: 80vh;
-    overflow-y: scroll;
-}
-
-
-body .reply .title{
-    margin: 20px 40px;
-    font-size: 2em;
-    font-weight: 800;
-}
-
-body .reply .body{
-    text-align: justify;
-    width: 30%;
-    margin: 0px 75px;
-    font-size: 1.2em;
-    font-style: oblique;
-    text-transform: capitalize;
-}
-
-body .reply form .solution{
-    margin-top: 50px;
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    padding-left: 10px;
-}
-
-
-body .reply form .solution textarea{
-    background-color: rgba(163, 241, 241, 0.75);
-    border-radius: 10px;
-}
-
-body .reply form button{
-    margin: 20px 100px;
-}
