--- a/css/managers.css
+++ b/css/managers.css
@@ -14,6 +14,7 @@ body table tbody tr{
 }
 
 body table tbody tr td{
+    width: fit-content;
     font-size: 1.2em;
     display: grid;
     grid-template-columns: 20px 40px 30px 30px 20px;    
@@ -21,8 +22,7 @@ body table tbody tr td{
 }
 
 body table tbody tr td:nth-child(2){
-    margin-right:70px;
-    margin-left: 20px;
+    margin-right:100px;
 }
 
 body table tbody tr:nth-child(1){
