--- a/css/managers.css
+++ b/css/managers.css
@@ -1,31 +1,47 @@
 a{
     text-decoration: none;
-    color: rgb(15, 176, 216);
 }
 
-body table {
+body table {  
     margin: auto;
-    margin-top: 50px;
+    margin-top: 40px;
+    background-color: rgba(219, 219, 219, 0.903);
+    border-radius: 50px;
+    padding: 60px 80px;
 }
 
-body table tbody tr{
-    display: flex;
-    gap: 50px;
-}
-
-body table tbody tr td{
-    width: fit-content;
-    font-size: 1.2em;
+body table tr{
+    text-align: center;
     display: grid;
-    grid-template-columns: 20px 40px 30px 30px 20px;    
+    grid-template-columns: 150px 300px 150px 150px 250px;    
     grid-template-rows: 10px 25px 25px;
 }
 
-body table tbody tr td:nth-child(2){
+body table tr td{
+    font-size: 1.2em;
+}
+
+body table tr td:nth-child(2){
     margin-right:100px;
 }
 
-body table tbody tr:nth-child(1){
+body table tr:nth-child(1){
     font-weight: 900;
     font-size: 1.3em;
+}
+
+
+.update{
+    color: rgb(15, 176, 216);
+    padding: 10px 15px;
+    border: rgb(15, 176, 216) solid 2px;
+    border-radius: 8px;
+    margin: 0 5px;
+}
+.delete{
+    color: tomato;
+    padding: 10px 15px;
+    border: tomato solid 2px;
+    border-radius: 8px;
+    margin: 0 5px;
 }
