--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 
 body .common_q{
-    background-color: rgba(219, 219, 219, 0.75);
+    background-color: #DBDFEA;
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
