--- a/css/managers.css
+++ b/css/managers.css
@@ -5,7 +5,7 @@ a{
 body table {  
     margin: auto;
     margin-top: 40px;
-    background-color: rgba(219, 219, 219, 0.903);
+    background-color: #DBDFEA;
     border-radius: 50px;
     padding: 60px 80px;
 }
