--- a/css/registered.css
+++ b/css/registered.css
@@ -3,7 +3,7 @@ body{
 }
 
 body .askedQ{
-    background-color: rgba(219, 219, 219, 0.75);
+    background-color: #DBDFEA;
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
