--- a/css/responder.css
+++ b/css/responder.css
@@ -1,7 +1,7 @@
 
 body .common_q{
     display: none;
-    background-color: rgba(219, 219, 219, 0.75);
+    background-color: #DBDFEA;
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
@@ -48,7 +48,7 @@ body .common_q .button{
 
 
 body .registered_tickets{
-    background-color: rgba(219, 219, 219, 0.75);
+    background-color: #DBDFEA;
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
@@ -123,7 +123,7 @@ body .registered_tickets .ticket form input{
 
 body .unreg_tickets{
     display:  none;
-    background-color: rgba(219, 219, 219, 0.75);
+    background-color: #DBDFEA;
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
