fixed reply page

--- a/css/responder.css
+++ b/css/responder.css
@@ -116,7 +116,17 @@ body .registered_tickets .ticket form input{
     display: none;
 }
 
-
+.replyAgain{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 10px;
+}
+.replyAgain form{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
 
 
 
