--- a/css/index.css
+++ b/css/index.css
@@ -1,30 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+body{
+    color: #000000;
+    background-color: #F6F1F1;
+}
+
+body nav{
+    background-color: #526D82;
+    color: #0A4D68;
+}
+
+body .header{
+    width: 100%;
+    height: 80vh;
+    background-image: url(../assets/background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    border-radius: 15px;
+    clip-path: polygon(0 0 , 100% 0, 100% 85% ,0 100%);
+    color: #F6F1F1;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    
+}
+
+body .header h1{
+    margin: 0;
+    font-size: 9.8em;
+    font-family: 'Dancing Script', cursive;
+}
+
+body .header p{
+    margin:auto;
+    font-size: 1.5em;
+    font-family: 'Lobster', cursive;
+}
 
 body .common_q{
-    background-color: #DBDFEA;
+    /* background-color: #DBDFEA;
     border-radius: 50px;
     margin: auto;
     margin-top: 25px;
     width: 80%;
     height: 80vh;
-    overflow-y: scroll;
+    overflow-y: scroll; */
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: grid;
+    gap: 50px;
+    grid-template-columns: 1fr 1fr;
 }
 
-body .common_q .title{
-    margin: 20px 40px;
+body .common_q .ticket{
+    background-color: #19A7CE;
+    border-radius: 15px;
+    padding: 15px 10px;
+}
+
+body .common_q .ticket:nth-child(3){
+    grid-column: span 2;
+}
+
+body .common_q .ticket:nth-child(4){
+    grid-column: span 2;
+}
+body .common_q .ticket .title{
     font-size: 2em;
     font-weight: 800;
 }
 
-body .common_q .body{
+body .common_q .ticket .body{
     text-align: justify;
-    width: 30%;
-    margin: 0px 75px;
     font-size: 1.2em;
     font-style: oblique;
     text-transform: capitalize;
 }
 
-body .common_q .addedBy{
+body .common_q .ticket .addedBy{
     text-align: right;
-    width: 40%;
+}
+
+body .footer{
+    height: 2em;
+    background-color: #19A7CE;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
