--- a/css/unregistered.css
+++ b/css/unregistered.css
@@ -6,34 +6,42 @@ body{
 }
 
 body .common_q{
-    display: block;
-    background-color: #DBDFEA;
-    border-radius: 50px;
-    margin: auto;
-    margin-top: 25px;
     width: 80%;
-    height: 80vh;
-    overflow-y: scroll;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: grid;
+    gap: 50px;
+    grid-template-columns: 1fr 2fr;
 }
 
-body .common_q .title{
-    margin: 20px 40px;
+body .common_q .ticket{
+    background-color: #19A7CE;
+    border-radius: 15px;
+    padding: 15px 10px;
+}
+
+body .common_q .ticket:nth-child(3){
+    grid-column: span 2;
+}
+
+body .common_q .ticket:nth-child(4){
+    grid-row: 1/3;
+}
+body .common_q .ticket .title{
     font-size: 2em;
     font-weight: 800;
 }
 
-body .common_q .body{
+body .common_q .ticket .body{
     text-align: justify;
-    width: 30%;
-    margin: 0px 75px;
     font-size: 1.2em;
     font-style: oblique;
     text-transform: capitalize;
 }
 
-body .common_q .addedBy{
+body .common_q .ticket .addedBy{
     text-align: right;
-    width: 40%;
 }
 
 body .raiseTForm {
