--- a/css/index.css
+++ b/css/index.css
@@ -5,17 +5,12 @@ body{
     background-color: #F6F1F1;
 }
 
-body nav{
-    background-color: #526D82;
-    color: #0A4D68;
-}
-
 body .header{
     width: 100%;
     height: 80vh;
-    background-image: url(../assets/background.jpg);
+    background-image: url(../assets/background-min.jpg);
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     border-radius: 15px;
     clip-path: polygon(0 0 , 100% 0, 100% 85% ,0 100%);
     color: #F6F1F1;
@@ -37,20 +32,13 @@ body .header p{
 }
 
 body .common_q{
-    /* background-color: #DBDFEA;
-    border-radius: 50px;
-    margin: auto;
-    margin-top: 25px;
-    width: 80%;
-    height: 80vh;
-    overflow-y: scroll; */
     width: 80%;
     margin: auto;
     margin-top: 50px;
     margin-bottom: 50px;
     display: grid;
     gap: 50px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
 }
 
 body .common_q .ticket{
@@ -64,7 +52,7 @@ body .common_q .ticket:nth-child(3){
 }
 
 body .common_q .ticket:nth-child(4){
-    grid-column: span 2;
+    grid-row: 1/3;
 }
 body .common_q .ticket .title{
     font-size: 2em;
