--- a/css/reply.css
+++ b/css/reply.css
@@ -1,11 +1,8 @@
-
-
-
-
-
-
-
-
+body{
+    background-image: radial-gradient( #e9fffd , #57c4ff);
+    background-size: cover;
+    color: #146C94;
+}
 
 body .reply{
     display:  block;
@@ -16,6 +13,7 @@ body .reply{
     width: 80%;
     height: 80vh;
     overflow-y: scroll;
+    
 }
 
 
