--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,8 @@ body .header{
     z-index: 10;
     width: 100%;
     height: 80vh;
-    background-image: radial-gradient( #E6FFFD , #88d5ff);
+    background-image: radial-gradient( #e9fffd , #57c4ff);
     background-size: cover;
-    /* background-attachment: fixed; */
     border-radius: 15px;
     clip-path: polygon(0 0 , 100% 0, 100% 85% ,0 100%);
     color: #146C94;
@@ -26,7 +25,8 @@ body .header h1{
     margin-top: 125px;
     font-size: 12em;
     font-family: 'Dancing Script', cursive;
-    animation: SwipeFromRight .5s ease forwards;
+    animation: SwipeFromRight .5s ease-in-out forwards;
+    user-select: none;
 }
 
 body .header img{
@@ -35,12 +35,14 @@ body .header img{
     transform: translateY(0%);
     font-size: 1.5em;
     font-family: 'Lobster', cursive;
-    animation: SwipeFromLeft 0.5s ease forwards;
+    animation: SwipeFromLeft 0.5s ease-in-out forwards;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 @keyframes SwipeFromLeft {
     0%{
-        transform: translateX(-1000%);
+        transform: translateX(-1500%);
     }
 
     90%{
@@ -92,6 +94,8 @@ body .common_q{
     display: grid;
     gap: 30px;
     grid-template-columns: 1fr 2fr;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 body .common_q .ticket{
@@ -99,6 +103,10 @@ body .common_q .ticket{
     border-radius: 15px;
     padding: 15px 10px;
     opacity: 0;
+}
+
+body .common_q .ticket:hover{
+    background-color: #4a90ce;
 }
 
 body .common_q .ticket:nth-child(3){
