--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,8 @@
 body{
     overflow: hidden;
+    background-image: radial-gradient( #e9fffd , #57c4ff);
+    background-size: cover;
+    color: #146C94;
 }
 
 .form{
