--- a/css/responder.css
+++ b/css/responder.css
@@ -1,61 +1,65 @@
+body {
+    background-image: radial-gradient( #e9fffd , #57c4ff);
+    background-size: cover;
+    color: #000000;
+}
 
 body .common_q{
     display: none;
-    background-color: #DBDFEA;
-    border-radius: 50px;
-    margin: auto;
-    margin-top: 25px;
     width: 80%;
-    height: 80vh;
-    overflow-y: scroll;
-    position: relative;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    gap: 30px;
+    grid-template-columns: 1fr 2fr;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
-body .common_q h1{
-    text-align: center;
-    font-size: 2.5em;
-    font-weight: 900;
-    color: rgb(13, 127, 203);
+body .common_q .ticket{
+    background-color: #B0DAFF;
+    border-radius: 15px;
+    padding: 15px 10px;
 }
 
-body .common_q .title{
-    margin: 20px 40px;
+body .common_q .ticket:hover{
+    background-color: #4a90ce;
+}
+
+body .common_q .ticket:nth-child(3){
+    grid-column: span 2;
+}
+
+body .common_q .ticket:nth-child(4){
+    grid-row: 1/3;
+}
+body .common_q .ticket .title{
     font-size: 2em;
-    font-weight: 600;
+    font-weight: 800;
 }
 
-body .common_q .body{
+body .common_q .ticket .body{
     text-align: justify;
-    width: 30%;
-    margin: 0px 75px;
     font-size: 1.2em;
     font-style: oblique;
     text-transform: capitalize;
 }
 
-body .common_q .addedBy{
+body .common_q .ticket .addedBy{
     text-align: right;
-    width: 40%;
 }
 
-body .common_q .button{
-    position: absolute;
-    top: 10%;
-    right: 5%; 
-}
+
 
 
 
 
 body .registered_tickets{
-    background-color: #DBDFEA;
     border-radius: 50px;
     margin: auto;
-    margin-top: 25px;
+    margin-top: 25px;    
+    margin-bottom: 25px;    
     width: 80%;
-    height: 80vh;
-    overflow-y: scroll;
-    flex-direction: column;
 }
 
 body .registered_tickets h1{
@@ -65,54 +69,65 @@ body .registered_tickets h1{
     color: rgb(13, 127, 203);
 }
 
-body .registered_tickets .ticket{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    margin-bottom: 20px;
+
+body .registered_tickets .alltickets{
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 1fr 1fr;
+    user-select: none;
+    -webkit-user-drag: none;
+    
 }
 
-body .registered_tickets .ticket .title{
-    margin: 20px 40px;
+
+body .registered_tickets .alltickets .ticket{
+    background-color: #B0DAFF;
+    border-radius: 15px;
+    padding: 20px;
+}
+
+body .registered_tickets .alltickets .ticket:hover{
+    background-color: #2b9cff;
+}
+
+body .registered_tickets .alltickets .ticket:nth-child(1){
+    grid-column: 1/3;
+}
+
+body .registered_tickets .alltickets .ticket .title{
     font-size: 2em;
     font-weight: 400;
 }
 
-body .registered_tickets .ticket .body{
+body .registered_tickets .alltickets .ticket .body{
     text-align: justify;
-    width: 100%;
-    margin: 0px 75px;
     font-size: 1.2em;
     font-style: oblique;
     text-transform: capitalize;
 }
 
-body .registered_tickets .ticket .addedBy{
+body .registered_tickets .alltickets .ticket .addedBy{
     text-align: right;
-    width: 100%;
 }
 
-body .registered_tickets .ticket form {
-    /* background-color: rgb(3, 152, 152); */    
-    align-self: flex-end;
+body .registered_tickets .alltickets .ticket form {
+    /* background-color: rgb(3, 152, 152);     */
+    display: flex;
+    justify-content: flex-end;
 }
 
-body .registered_tickets .ticket .button{
+body .registered_tickets .alltickets .ticket .button{
     border-radius: 10px;
     margin: 25px 0px;
-    padding: 5px 10px;    
-    align-self: flex-end;
     box-shadow: 0px 0px;
 }
 
-body .registered_tickets .ticket form .button{
+body .registered_tickets .alltickets .ticket form .button{
     border-radius: 10px;
-    margin: 25px 0px;
-    padding: 5px 10px;
     box-shadow: 1px 2px;
 }
 
-body .registered_tickets .ticket form input{
+body .registered_tickets .alltickets .ticket form input{
     display: none;
 }
 
@@ -133,13 +148,9 @@ body .registered_tickets .ticket form input{
 
 body .unreg_tickets{
     display:  none;
-    background-color: #DBDFEA;
-    border-radius: 50px;
-    margin: auto;
-    margin-top: 25px;
     width: 80%;
-    height: 80vh;
-    overflow-y: scroll;
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 body .unreg_tickets h1{
@@ -149,20 +160,38 @@ body .unreg_tickets h1{
     color: rgb(13, 127, 203);
 }
 
-body .unreg_tickets .ticket{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    margin-bottom: 35px;
+body .unreg_tickets .alltickets{
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 1fr 1fr;
+    user-select: none;
+    -webkit-user-drag: none;
+    justify-content: start;
+    align-items: center;
 }
 
-body .unreg_tickets .ticket .title{
-    margin: 20px 40px;
+body .unreg_tickets .alltickets .ticket{
+    background-color: #B0DAFF;
+    border-radius: 15px;
+    padding: 20px;
+}
+
+body .unreg_tickets .alltickets .ticket:hover{
+    background-color: #79b0e0;
+}
+
+body .unreg_tickets .alltickets .ticket:nth-child(3){
+    grid-row: 1/3;
+    grid-column: 2;
+}
+
+body .unreg_tickets .alltickets .ticket .title{
+    
     font-size: 2em;
     font-weight: 800;
 }
 
-body .unreg_tickets .ticket .body{
+body .unreg_tickets .alltickets .ticket .body{
     text-align: justify;
     width: 80%;
     margin: 0px 75px;
@@ -171,12 +200,12 @@ body .unreg_tickets .ticket .body{
     text-transform: capitalize;
 }
 
-body .unreg_tickets .ticket .addedBy{
+body .unreg_tickets .alltickets .ticket .addedBy{
     text-align: right;
     width: 90%;
 }
 
-body .unreg_tickets .ticket form button{
+body .unreg_tickets .alltickets .ticket form button{
     /* background-color: rgb(3, 152, 152); */
     border-radius: 10px;
     width: 10%;
