--- a/css/unregistered.css
+++ b/css/unregistered.css
@@ -1,47 +1,8 @@
 body{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
     margin-bottom: 200px;
-}
-
-body .common_q{
-    width: 80%;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    display: grid;
-    gap: 50px;
-    grid-template-columns: 1fr 2fr;
-}
-
-body .common_q .ticket{
-    background-color: #19A7CE;
-    border-radius: 15px;
-    padding: 15px 10px;
-}
-
-body .common_q .ticket:nth-child(3){
-    grid-column: span 2;
-}
-
-body .common_q .ticket:nth-child(4){
-    grid-row: 1/3;
-}
-body .common_q .ticket .title{
-    font-size: 2em;
-    font-weight: 800;
-}
-
-body .common_q .ticket .body{
-    text-align: justify;
-    font-size: 1.2em;
-    font-style: oblique;
-    text-transform: capitalize;
-}
-
-body .common_q .ticket .addedBy{
-    text-align: right;
+    background-image: radial-gradient( #e9fffd , #57c4ff);
+    background-size: cover;
+    color: #146C94;
 }
 
 body .raiseTForm {
