--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 body{
-    color: #000000;
-    background-color: #F6F1F1;
+    color: #020d09;
+    background-color: #d7f9ed;
 }
 
 body .header{
@@ -13,7 +14,7 @@ body .header{
     background-size: cover;
     border-radius: 15px;
     clip-path: polygon(0 0 , 100% 0, 100% 85% ,0 100%);
-    color: #146C94;
+    color: #020d09;
     display: grid;
     grid-template-columns: 1fr  1fr;
     position: relative;
@@ -25,7 +26,7 @@ body .header h1{
     margin-top: 125px;
     font-size: 12em;
     font-family: 'Dancing Script', cursive;
-    animation: SwipeFromRight .5s ease-in-out forwards;
+    animation: SwipeFromRight .8s ease-in-out forwards;
     user-select: none;
 }
 
@@ -35,14 +36,14 @@ body .header img{
     transform: translateY(0%);
     font-size: 1.5em;
     font-family: 'Lobster', cursive;
-    animation: SwipeFromLeft 0.5s ease-in-out forwards;
+    animation: SwipeFromLeft .8s ease-in-out forwards;
     user-select: none;
     -webkit-user-drag: none;
 }
 
 @keyframes SwipeFromLeft {
     0%{
-        transform: translateX(-1500%);
+        transform: translateX(-500%);
     }
 
     90%{
@@ -55,7 +56,7 @@ body .header img{
 
 @keyframes SwipeFromRight {
     0%{
-        transform: translateX(1000%);
+        transform: translateX(500%);
     }
 
     90%{
@@ -69,15 +70,14 @@ body .header img{
 @keyframes appear {
     0%{
         opacity: 0;
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0);
     }
 
     80%{
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0);
     }
     100%{
         opacity: 1;
-        background-color: B0DAFF;
     }
 }
 
@@ -99,14 +99,14 @@ body .common_q{
 }
 
 body .common_q .ticket{
-    background-color: #B0DAFF;
+    background-color: #f6fefb;
     border-radius: 15px;
     padding: 15px 10px;
     opacity: 0;
 }
 
 body .common_q .ticket:hover{
-    background-color: #4a90ce;
+    background-color: #7ec3ff;
 }
 
 body .common_q .ticket:nth-child(3){
@@ -133,10 +133,56 @@ body .common_q .ticket .addedBy{
 }
 
 body .footer{
-    height: 2em;
-    background-color: #B0DAFF;
+    height: 15em;
+    background-color: #f6fefb;
     border-radius: 15px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
+}
+
+body .footer .container{
+    /* border: black solid 1px; */
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+}
+
+body .footer .container .contact{
+    /* border: black solid 1px; */
+    grid-row: 1;
+    width: 60%;
+    display:grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+body .footer .container .contact p{
+    justify-self: end;
+    grid-row: 1/3;
+    font-size: 2.5em;
+    font-family: 'Anton', sans-serif;
+}
+
+body .footer .container .contact div{
+    justify-self: end;
+    grid-row: 3;
+}
+
+body .footer .container .copyright{
+    grid-column: 1;
+    grid-row: 2;
+    justify-self: end;
+}
+
+body .footer .container .socails{
+    grid-column: 3;
+    grid-row: 2;
+    justify-self: end;
+}
+
+body .footer .container .socails img{
+    margin-inline: 5px;
+    
+    height: 15px;
+    width: 15px;
 }
