--- a/css/addcommonq.css
+++ b/css/addcommonq.css
@@ -1,29 +1,31 @@
 body{
-    overflow: hidden;
     background-image: radial-gradient( #e9fffd , #57c4ff);
     background-size: cover;
     color: #146C94;
 }
 
-.form{
+form{
+    
+}
+
+fieldset{
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 15px;
     width: 50vw;    
     background: #DBDFEA;
     padding: 50px 100px;
     border-radius: 20px;
 }
 
-fieldset{
-    border-radius: 15px;
-}
-
-.form .addcommonqform{
+form .addcommonqform{
     display: flex;
     justify-content: space-around;
 }
 
 
 
-.form .button{
+form .Ayabutton{
     transform: translateX(400%);
     width: 10%;
     border-radius: 20px;
