--- a/css/addcommonq.css
+++ b/css/addcommonq.css
@@ -25,7 +25,7 @@ form .addcommonqform{
 
 
 
-form .Ayabutton{
+form .Ayabutton button{
     transform: translateX(400%);
     width: 10%;
     border-radius: 20px;
