--- a/css/registered.css
+++ b/css/registered.css
@@ -68,10 +68,10 @@ body .askedQ .AllTickets .ticket .button{
     align-self: flex-end;
 }
 
-#noReply{
-    border-radius: 10px;
-    align-self: flex-end;
-    box-shadow: 0px 0px;
+body .askedQ .AllTickets .ticket .buttons{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 
@@ -100,7 +100,7 @@ body .raiseT .raiseTForm {
 }
 
 body .raiseT .raiseTForm fieldset {
-    /* padding: 30px 40px; */
+    padding: 30px 40px;
 }
 
 body .raiseT .raiseTForm fieldset > * {
