--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 a{
     text-decoration: none;
 }
@@ -79,7 +82,20 @@ nav .button{
     align-self: center;
     width: 65%;
 }
+nav a{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 35%;
+    justify-self: center;
+    align-self: center;
+    width: 85%;
+}
 
+nav a .button{
+    height: 100%;
+    width: 100%;
+}
 .button{
     border: 2px solid #430f62;
     border-radius: 5px;
