--- a/css/registered.css
+++ b/css/registered.css
@@ -132,7 +132,7 @@ body .header{
     background-size: cover;
     border-radius: 15px;
     clip-path: polygon(0 0 , 100% 0, 100% 90% ,0 100%);
-    color: #0b5037;
+    color: #070A52;
     display: grid;
     grid-template-columns: 1fr  1fr;
     position: relative;
@@ -260,7 +260,7 @@ body .container .services .card{
     padding: 25px 35px;
     border-radius: 20px;
     background-color: #00aaff;
-    color: #00fbff;
+    color: #ffffff;
 }
 
 body .container .services .card .title{
